Bug 1142806 - Try to keep at least one foreground process at any time. r=gsvelto